// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemTitle should render button title 1`] = `
<div
  className={undefined}
>
  <TooltipTrigger
    label="Directives application Home Loan Account"
    tooltipPlacement="top"
  >
    <RenderButton
      className="my-title"
      id="Practical Fresh Pants"
      item={
        Object {
          "author": "Carli Kilback",
          "created": "2016-09-22",
          "displayMode": "input",
          "icon": "fa fa-file-excel-o",
          "id": 37454,
          "modified": "2016-09-22",
          "name": "Directives application Home Loan Account",
        }
      }
      onClick={[Function]}
      value="Directives application Home Loan Account"
    />
  </TooltipTrigger>
</div>
`;

exports[`ItemTitle should render icon 1`] = `
<div
  className={undefined}
>
  <Icon
    className="tc-list-icon"
    name="fa fa-file-excel-o"
  />
  <TooltipTrigger
    label="Directives application Home Loan Account"
    tooltipPlacement="top"
  >
    <span
      className="my-title"
      id={undefined}
    >
      Directives application Home Loan Account
    </span>
  </TooltipTrigger>
</div>
`;

exports[`ItemTitle should render input title 1`] = `
<div
  className={undefined}
>
  <TooltipTrigger
    label="Directives application Home Loan Account"
    tooltipPlacement="top"
  >
    <TitleInput
      id="Savings Account"
      item={
        Object {
          "author": "Carli Kilback",
          "created": "2016-09-22",
          "displayMode": "input",
          "icon": "fa fa-file-excel-o",
          "id": 37454,
          "modified": "2016-09-22",
          "name": "Directives application Home Loan Account",
        }
      }
      onEditCancel={undefined}
      onEditSubmit={undefined}
      value="Directives application Home Loan Account"
    />
  </TooltipTrigger>
</div>
`;

exports[`ItemTitle should render text title 1`] = `
<div
  className={undefined}
>
  <TooltipTrigger
    label="Directives application Home Loan Account"
    tooltipPlacement="top"
  >
    <span
      className="my-title"
      id="Computer"
    >
      Directives application Home Loan Account
    </span>
  </TooltipTrigger>
</div>
`;

exports[`ItemTitle should render text with undefined 1`] = `
<div
  className={undefined}
>
  <TooltipTrigger
    label={undefined}
    tooltipPlacement="top"
  >
    <span
      className="my-title"
      id="alarm"
    />
  </TooltipTrigger>
</div>
`;
